# modernauth-dash

./: .env  .env.example  LICENSE.md  Procfile  pyproject.toml  requirements.txt  setup.py
src/modernauthdash/: app.py
src/modernauthdash.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/modernauthdash/db/: dashdb.py
src/modernauthdash/static/css/: style.css
src/modernauthdash/static/js/: dashboard.js
src/modernauthdash/templates/: analytics.html  base.html  dashboard.html  settings.html
