[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modernauthdash"
version = "0.1.0"
description = "ModernAuthentication Dashboard"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "Flask"
]

[tool.setuptools.packages.find]
where = ["src"]
